@startuml

title __SIGNUP's Class Diagram__\n

  namespace com.gmail.ib.projectCrypt {
    namespace ui {
      namespace signUp {
        class SignUpScreen {
            + SignUpScreen()
            + form()
            - buildUI()
        }
      }
    }
  }
  

  namespace com.gmail.ib.projectCrypt {
    namespace ui {
      namespace signUp {
        class userControl {
            + createUser()
        }
      }
    }
  }
  

  SignUpScreen -up-|> com.vaadin.flow.component.orderedlayout.VerticalLayout
  SignUpScreen o-- AccessControl : accessControl


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
